# crowdfunding-solana

./: Cargo.toml  NOTES.md  task.txt
src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
tests/: crowdfunding_tests.rs
