[package]
name = "crowdfunding"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18"
borsh = "1.5"
borsh-derive = "1.5"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
